--- a/website/static/search_style.css
+++ b/website/static/search_style.css
@@ -1,4 +1,4 @@
-/* This style has the style of our tables, 
+/* The search_style.css has the style of our tables, 
 it will be use by search_grocery and grocery_table*/
 
 body {
